<resources>
    <string name="app_name">Planner</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_end_time">Enter End Time</string>
    <string name="create_event">Create Event</string>
    <string name="enter_start_time">Enter Start Time</string>
    <string name="enter_event_name">Enter Event Name</string>
    <string name="enter_location">Enter Location</string>
    <string name="enter_day">Enter Day</string>

</resources>